<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:id="@+id/linearLayout"
            android:visibility="gone">
            <Button
                android:id="@+id/btnInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickInsert"
                android:text="@string/insert"
                android:visibility="invisible">
            </Button>
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickUpdate"
                android:text="@string/update">
            </Button>
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickDelete"
                android:text="@string/delete">
            </Button>
            <Button
                android:id="@+id/btnError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickConfig"
                android:text="@string/btnConfig">
            </Button>
        </LinearLayout>

        <ListView
            android:id="@+id/lvMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            android:dividerHeight="0dp"
            android:drawSelectorOnTop="false"
            android:divider="@android:color/background_light"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/form">
        </ListView>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:clickable="false"
            android:layout_alignParentRight="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/etMessageText"
                android:enabled="true"
                android:layout_toStartOf="@+id/btnMessageSend"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_message_send"
                android:id="@+id/btnMessageSend"
                android:onClick="onClickMessageSend"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
</RelativeLayout>