<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.javapapers.android.chat.InviteActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:id="@+id/laySendInvite"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_couple_text"
            android:id="@+id/textView6"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPairEmail"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_couple_button"
            android:id="@+id/btnInviteCouple"
            android:onClick="onClickInviteCouple"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbInviteWait"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/layViewInvitation"
        android:gravity="center"
        android:layout_below="@+id/laySendInvite"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_couple_text"
            android:id="@+id/tvInvitationText"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_confirm_button"
            android:id="@+id/btnInvitationConfirm"
            android:onClick="onClickInvitationConfirm"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_reject_button"
            android:id="@+id/btnInvitationReject"
            android:onClick="onClickInvitationReject"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/layWaitAnswer"
        android:gravity="center"
        android:layout_below="@+id/layViewInvitation"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_couple_text"
            android:id="@+id/tvWaitAnswerText"
            android:gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invitation_cancel_button"
            android:id="@+id/btnWaitAnswerCancel"
            android:onClick="onClickWaitAnswerCancel"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
